# site

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.nu  build.sh  serve.nu  serve.sh
about_client/: Cargo.toml  manifest.webmanifest
about_client/css/: mystyles.scss
about_client/js/: main.js  sw.js
about_client/src/: app.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
