[package]
name = "about_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
yew = { git="https://github.com/yewstack/yew" }
yew-router = { git="https://github.com/yewstack/yew" } 
web-sys = "0.3"
wasm-logger = "0.2.0"
log = "0.4.6"
